--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "react-dom": "^16.3.2",
     "react-hot-loader": "^4.1.2",
     "react-intl": "^2.4.0",
-    "react-router-dom": "^4.3.0-rc.3"
+    "react-router-dom": "^4.3.0-rc.3",
+    "swiper": "^4.5.0"
   },
   "license": " Apache2.0"
 }
