--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "webpack-dev-server": "^2.3.0"
   },
   "dependencies": {
+    "antd": "^3.14.1",
     "d3": "^3.5.12",
     "echarts": "^3.7.1",
     "echarts-for-react": "^2.0.15-beta.0",
@@ -43,6 +44,7 @@
     "es6-promise": "^3.1.2",
     "javascript-time-ago": "^2.0.1",
     "jquery": "^1.12.4",
+    "moment": "^2.24.0",
     "react": "^16.3.2",
     "react-bootstrap": "^0.31.3",
     "react-dom": "^16.3.2",
