--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-hot-loader": "^4.1.2",
     "react-intl": "^2.4.0",
     "react-router-dom": "^4.3.0-rc.3",
+    "react-transition-group": "^2.6.1",
     "swiper": "^4.5.0"
   },
   "license": " Apache2.0"
