--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-dom": "^16.3.2",
     "react-hot-loader": "^4.1.2",
     "react-intl": "^2.4.0",
+    "react-loadable": "^5.5.0",
     "react-router-dom": "^4.3.0-rc.3",
     "react-transition-group": "^2.6.1",
     "swiper": "^4.5.0"
