--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "webpack-bundle-analyzer": "^3.1.0",
     "webpack-bundle-tracker": "^0.3.0",
     "webpack-dev-server": "^2.3.0",
-    "react-hot-loader": "^4.1.2",
+    "react-hot-loader": "^4.1.2"
   },
   "dependencies": {
     "antd": "^3.14.1",
