--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "jquery": "^1.12.4",
     "react": "^16.3.2",
     "react-bootstrap": "^0.31.3",
+    "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.3.2",
     "react-intl": "^2.4.0",
     "react-loadable": "^5.5.0",
