--- a/package.json
+++ b/package.json
@@ -29,13 +29,13 @@
     "less-loader": "^4.1.0",
     "postcss-loader": "1.3.3",
     "raw-loader": "0.5.1",
+    "react-hot-loader": "^4.1.2",
     "style-loader": "^0.21.0",
     "url-loader": "^0.5.7",
-    "webpack": "^2.7.0",
+    "webpack": "^2.6.1",
     "webpack-bundle-analyzer": "^3.1.0",
     "webpack-bundle-tracker": "^0.3.0",
-    "webpack-dev-server": "^2.3.0",
-    "react-hot-loader": "^4.1.2"
+    "webpack-dev-server": "^2.3.0"
   },
   "dependencies": {
     "antd": "^3.14.1",
