--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "author": "triasTeam",
   "scripts": {
     "start": "set NODE_ENV=development&& webpack-dev-server --config webpack.config.dev.js",
-    "build": "set NODE_ENV=production&& webpack --config webpack.config.prod.js --progress --colors -p"
+    "build": "set NODE_ENV=production&& webpack --config webpack.config.prod.js --progress --colors -p",
+    "styleguide": "styleguidist server",
+    "styleguide:build": "styleguidist build"
   },
   "devDependencies": {
     "autoprefixer": "^7.2.4",
@@ -30,6 +32,7 @@
     "postcss-loader": "1.3.3",
     "raw-loader": "0.5.1",
     "react-hot-loader": "^4.1.2",
+    "react-styleguidist": "6.2.1",
     "style-loader": "^0.21.0",
     "url-loader": "^0.5.7",
     "webpack": "^2.6.1",
@@ -45,6 +48,7 @@
     "es5-shim": "^4.5.9",
     "es6-promise": "^3.1.2",
     "jquery": "^1.12.4",
+    "prop-types": "15.7.2",
     "react": "^16.3.2",
     "react-bootstrap": "^0.31.3",
     "react-copy-to-clipboard": "^5.0.1",
