--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "autoprefixer": "^7.2.4",
     "babel-core": "^6.6.5",
+    "babel-eslint": "10.0.3",
     "babel-loader": "^6.2.4",
     "babel-plugin-import": "^1.1.1",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
@@ -23,6 +24,8 @@
     "clean-webpack-plugin": "^0.1.19",
     "css-hot-loader": "^1.3.9",
     "css-loader": "^0.28.11",
+    "eslint": "6.8.0",
+    "eslint-plugin-react": "7.18.3",
     "exports-loader": "^0.7.0",
     "extract-text-webpack-plugin": "^2.1.2",
     "file-loader": "^1.1.11",
