--- a/.babelrc
+++ b/.babelrc
@@ -7,11 +7,11 @@
   "plugins": [
     "react-hot-loader/babel",
     "syntax-dynamic-import",
-    "transform-decorators-legacy",
-    ["import", {
-      "libraryName": "antd",
-      "libraryDirectory": "es",
-      "style": "css" // `style: true` 会加载 less 文件
-    }]
+    "transform-decorators-legacy"
+//    ["import", {
+//      "libraryName": "antd",
+//      "libraryDirectory": "es",
+//      "style": "true" // `style: true` 会加载 less 文件
+//    }]
   ]
 }
