--- a/package.json
+++ b/package.json
@@ -10,35 +10,38 @@
     "styleguide:build": "styleguidist build"
   },
   "devDependencies": {
-    "autoprefixer": "^7.2.4",
     "babel-core": "^6.6.5",
-    "babel-loader": "^6.2.4",
-    "babel-plugin-import": "^1.1.1",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "autoprefixer": "^7.2.4",
+    "babel-loader": "^6.2.4",
+    "babel-plugin-import": "1.13.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
+    "babel-preset-es2015": "^6.6.0",
     "babel-preset-stage-0": "^6.5.0",
     "bootstrap": "^3.3.6",
-    "clean-webpack-plugin": "^0.1.19",
+    "clean-webpack-plugin": "^3.0.0",
     "css-hot-loader": "^1.3.9",
-    "css-loader": "^0.28.11",
+    "css-loader": "1.0.0",
     "exports-loader": "^0.7.0",
-    "extract-text-webpack-plugin": "^2.1.2",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
+    "html-webpack-plugin": "^3.2.0",
     "json-loader": "^0.5.7",
-    "less": "^3.0.4",
-    "less-loader": "^4.1.0",
-    "postcss-loader": "1.3.3",
-    "raw-loader": "0.5.1",
-    "react-hot-loader": "^4.1.2",
+    "less": "^3.9.0",
+    "less-loader": "^5.0.0",
+    "postcss-loader": "^3.0.0",
+    "mini-css-extract-plugin": "^0.8.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "raw-loader": "^3.1.0",
+    "react-hot-loader": "^4.12.10",
     "react-styleguidist": "6.2.1",
-    "style-loader": "^0.21.0",
-    "url-loader": "^0.5.7",
-    "webpack": "^2.6.1",
-    "webpack-bundle-analyzer": "^3.1.0",
-    "webpack-bundle-tracker": "^0.3.0",
-    "webpack-dev-server": "^2.3.0"
+    "style-loader": "^1.0.0",
+    "url-loader": "^2.1.0",
+    "webpack": "^4.46.0",
+    "webpack-bundle-tracker": "^0.4.3",
+    "webpack-cli": "3.3.11",
+    "webpack-dev-server": "^3.8.0"
   },
   "dependencies": {
     "antd": "^3.14.1",
