--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
     "styleguide:build": "styleguidist build"
   },
   "devDependencies": {
-    "babel-core": "^6.6.5",
-    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "autoprefixer": "^7.2.4",
+    "babel-core": "^6.6.5",
     "babel-loader": "^6.2.4",
     "babel-plugin-import": "1.13.0",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-preset-react": "^6.5.0",
     "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "bootstrap": "^3.3.6",
     "clean-webpack-plugin": "^3.0.0",
@@ -30,13 +30,14 @@
     "json-loader": "^0.5.7",
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
-    "postcss-loader": "^3.0.0",
     "mini-css-extract-plugin": "^0.8.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "postcss-loader": "^3.0.0",
     "raw-loader": "^3.1.0",
     "react-hot-loader": "^4.12.10",
     "react-styleguidist": "6.2.1",
     "style-loader": "^1.0.0",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "url-loader": "^2.1.0",
     "webpack": "^4.46.0",
     "webpack-bundle-tracker": "^0.4.3",
