--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-Django==1.10.4
-django-webpack-loader==0.2.4
-django-ratelimit==2.0.0
-mysqlclient==1.3.10
-requests==2.20.1
-redis==2.10.5
+Django==3.2.10
+PyMySQL==1.0.2
+django-webpack-loader==0.7.0
+requests==2.26.0
+redis
 redis-py-cluster==2.1.0
